.config/waybar/style.css
* {
    /* `otf-font-awesome` is required to be installed for icons */
    font-family: JetBrains Mono, FontAwesome, Roboto, Helvetica, Arial, sans-serif;
    font-weight: bold;
    font-size: 14px;
    min-height: 0px;
    border: none;
    padding: 0;
    margin: 0;
}

window#waybar {
    background-color: #282828;
    border-bottom: 3px solid #282828;
    color: #ebdbb2;
    transition-property: background-color;
    transition-duration: .5s;
}

window#waybar.hidden {
    opacity: 0.2;
}

tooltip {
    background-color: #282828;
}

tooltip label {
    font-weight: normal;
    color: #ebdbb2;
}

/*
window#waybar.empty {
    background-color: transparent;
}
window#waybar.solo {
    background-color: #FFFFFF;
}
*/

window#waybar.termite {
    background-color: #3F3F3F;
}

window#waybar.chromium {
    background-color: #000000;
    border: none;
}

button {
    /* Use box-shadow instead of border so the text isn't offset */
    box-shadow: inset 0 -3px transparent;
    /* Avoid rounded borders under each button name */
    border-bottom: none;
    border-radius: 2;
}

/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
button:hover {
    background: inherit;
    box-shadow: inset 0 -3px #f9f5d7;
}

#workspaces button {
    padding: 0 3px;
    background-color: #282828;
    color: #ebdbb2;
}

#workspaces button:hover {
    background: #dde5c2;
    color: #282828;
    box-shadow: inset 0 -3px #e4edc8;
}

#workspaces button.focused {
    background-color: #a9b665;
    color: #282828;
    box-shadow: inset 0 -3px #dde5c2;
}

#workspaces button.urgent {
    background-color: #ea6962;
    color: #282828;
}

#mode {
    background-color: #3c3836;
    border-bottom: 3px solid #ebdbb2;
}

#clock,
#battery,
#cpu,
#memory,
#disk,
#temperature,
#backlight,
#network,
#pulseaudio,
#wireplumber,
#custom-media,
#tray,
#mode,
#idle_inhibitor,
#scratchpad,
#mpd {
    margin: 0 0 0;
    padding: 0 3px 0;
    color: #ebdbb2;
    border: none;
    border-radius: 5;
    margin-bottom: 2px;
}

#window,
#workspaces {
    margin: 0 4px;
    border-bottom: 1.5pt solid transparent;
}

/* If workspaces is the leftmost module, omit left margin */
.modules-left > widget:first-child > #workspaces {
    margin-left: 0;
}

/* If workspaces is the rightmost module, omit right margin */
.modules-right > widget:last-child > #workspaces {
    margin-right: 0;
}

#clock {
    background-color: #ebdbb2;
    color: #282828
}

#battery {
    background-color: #89b482;
    color: #282828;
}

#battery.charging, #battery.plugged {
    color: #ebdbb2;
    background-color: #e78a4e;
}

@keyframes blink {
    to {
        background-color: #ffffff;
        color: #000000;
    }
}

#battery.warning:not(.charging) {
    background-color: #f53c3c;
    color: #ffffff;
}

#battery.critical:not(.charging) {
    background-color: #f53c3c;
    color: #ffffff;
    animation-name: blink;
    animation-duration: 0.5s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
    animation-direction: alternate;
}

label:focus {
    background-color: #282828;
    color: #ebdbb2;
}

#cpu {
    background-color: #7daea3;
    color: #282828;
}

#memory {
    background-color: #d3869b;
    color: #282828;
}

#disk {
    background-color: #ba9566;
    color: #282828;
}

#backlight {
    background-color: #d8a657;
    color: #282828;
}

#network {
    background-color: #2980b9;
}

#network.disconnected {
    background-color: #3c1f1e;
}

#pulseaudio {
    background-color: #f1c40f;
    color: #000000;
}

#pulseaudio.muted {
    background-color: #90b1b1;
    color: #2a5c45;
}

#wireplumber {
    background-color: #fff0f5;
    color: #000000;
}

#wireplumber.muted {
    background-color: #f53c3c;
}

#custom-media,
#mpris {
    background-color: rgba(0, 0, 0, 0.2);
    color: #ebdbb2;
    min-width: 100px;
    padding: 0px 0px;
    margin-left: 7px;
}


#custom-media.custom-spotify {
    background-color: #66cc99;
}

#custom-media.custom-vlc {
    background-color: #ffa000;
}

#temperature {
    background-color: #e78a4e;
    color: #282828;
}

#temperature.critical {
    background-color: #f53c3c;
}

#tray {
    background-color: #3c3836;
}

#tray > .passive {
    -gtk-icon-effect: dim;
}

#tray > .needs-attention {
    -gtk-icon-effect: highlight;
    background-color: #ea6962;
}

#idle_inhibitor {
    background-color: #3c3836;
}

#idle_inhibitor.activated {
    background-color: #ecf0f1;
    color: #2d3436;
}

#mpd {
    background-color: #66cc99;
    color: #2a5c45;
}

#mpd.disconnected {
    background-color: #f53c3c;
}

#mpd.stopped {
    background-color: #90b1b1;
}

#mpd.paused {
    background-color: #51a37a;
}

#language {
    background: #00b093;
    color: #740864;
    padding: 0 3px;
    margin: 0 5px;
    min-width: 16px;
}

#keyboard-state {
    background: #97e1ad;
    color: #000000;
    padding: 0 0px;
    margin: 0 5px;
    min-width: 16px;
}

#keyboard-state > label {
    padding: 0 3px;
}

#keyboard-state > label.locked {
    background: rgba(0, 0, 0, 0.2);
}

#scratchpad {
    background: rgba(0, 0, 0, 0.2);
}

#scratchpad.empty {
	background-color: transparent;
}

